--- a/search-detail.html
+++ b/search-detail.html
@@ -312,55 +312,55 @@
 
                   <div class="tag-btns" id="tag-btns">
                     <button
-                      class="tag-btn flex-1 bg-clr_blue text-sm py-2 px-3 text-white rounded-lg hover:shadow-btn font-semibold mb-2 mb-md-0"
+                      class="tag-btn flex-1 bg-[#ECECEC] text-[#A6A6A6] text-sm py-2 px-3 rounded-lg hover:shadow-md font-semibold mb-2 mb-md-0"
                       type="button"
                     >
                       javascript
                     </button>
                     <button
-                      class="tag-btn flex-1 bg-clr_blue text-sm py-2 px-3 text-white rounded-lg hover:shadow-btn font-semibold"
+                      class="tag-btn flex-1 bg-[#ECECEC] text-[#A6A6A6] text-sm py-2 px-3 rounded-lg hover:shadow-md font-semibold"
                       type="button"
                     >
                       java
                     </button>
                     <button
-                      class="tag-btn flex-1 bg-clr_blue text-sm py-2 px-3 text-white rounded-lg hover:shadow-btn font-semibold"
+                      class="tag-btn flex-1 bg-[#ECECEC] text-[#A6A6A6] text-sm py-2 px-3 rounded-lg hover:shadow-md font-semibold"
                       type="button"
                     >
                       jquery
                     </button>
                     <button
-                      class="tag-btn flex-1 bg-clr_blue text-sm py-2 px-3 text-white rounded-lg hover:shadow-btn font-semibold"
+                      class="tag-btn flex-1 bg-[#ECECEC] text-[#A6A6A6] text-sm py-2 px-3 rounded-lg hover:shadow-md font-semibold"
                       type="button"
                     >
                       html
                     </button>
                     <button
-                      class="tag-btn flex-1 bg-clr_blue text-sm py-2 px-3 text-white rounded-lg hover:shadow-btn font-semibold"
+                      class="tag-btn flex-1 bg-[#ECECEC] text-[#A6A6A6] text-sm py-2 px-3 rounded-lg hover:shadow-md font-semibold"
                       type="button"
                     >
                       arrays
                     </button>
                     <button
-                      class="tag-btn flex-1 bg-clr_blue text-sm py-2 px-3 text-white rounded-lg hover:shadow-btn font-semibold"
+                      class="tag-btn flex-1 bg-[#ECECEC] text-[#A6A6A6] text-sm py-2 px-3 rounded-lg hover:shadow-md font-semibold"
                       type="button"
                     >
                       css
                     </button>
                     <button
-                      class="tag-btn flex-1 bg-clr_blue text-sm py-2 px-3 text-white rounded-lg hover:shadow-btn font-semibold"
+                      class="tag-btn flex-1 bg-[#ECECEC] text-[#A6A6A6] text-sm py-2 px-3 rounded-lg hover:shadow-md font-semibold"
                       type="button"
                     >
                       php
                     </button>
                     <button
-                      class="tag-btn flex-1 bg-clr_blue text-sm py-2 px-3 text-white rounded-lg hover:shadow-btn font-semibold"
+                      class="tag-btn flex-1 bg-[#ECECEC] text-[#A6A6A6] text-sm py-2 px-3 rounded-lg hover:shadow-md font-semibold"
                       type="button"
                     >
                       c
                     </button>
                     <button
-                      class="tag-btn flex-1 bg-clr_blue text-sm py-2 px-3 text-white rounded-lg hover:shadow-btn font-semibold"
+                      class="tag-btn flex-1 bg-[#ECECEC] text-[#A6A6A6] text-sm py-2 px-3 rounded-lg hover:shadow-md font-semibold"
                       type="button"
                     >
                       form
