--- a/goto-meeting.html
+++ b/goto-meeting.html
@@ -392,8 +392,8 @@
                           <textarea
                             id="textarea-chat"
                             cols="30"
-                            rows="1"
-                            class="hidden rounded-sm bg-[#F7F7FC] w-full py-2 px-3 resize-none"
+                            rows="3"
+                            class="hidden rounded-sm bg-[#F7F7FC] w-full py-2 px-3"
                           ></textarea>
 
                           <button class="cursor-pointer">
