--- a/create-post.html
+++ b/create-post.html
@@ -276,7 +276,7 @@
                 </div>
               </div>
               <div class="border-bottom w-full border-b opacity-60 mt-2"></div>
-              <form class="create-post-form pt-6 pb-16">
+              <div class="create-post-form pt-6 pb-16">
                 <div class="mb-4">
                   <label
                     class="block text-xs text-clr_blue_light font-semibold mb-2"
@@ -313,66 +313,58 @@
                     id="tag-input"
                   />
                 </div>
-                <p class="text-xs font-semibold text-clr_blue_light pb-2">
+
+                <p class="inline mr-2 text-xs font-semibold text-clr_blue_light pb-2">
                   Recommended Tags:
-                  <!-- <span class="text-clr_gray_light ml-3"
-                    >No predicitions yet</span
-                  > -->
                 </p>
-                <div class="tag-btns" id="tag-btns">
+                <div class="tag-btns inline">
                   <button
-                    class="tag-btn flex-1 bg-[#250ced10] text-clr_blue text-sm py-2 px-3 rounded-lg hover:shadow-md font-semibold mb-2 mb-md-0"
+                    class="tag-btn flex-1 bg-[#250ced10] text-clr_blue text-sm py-2 px-3 rounded-lg hover:shadow-md font-semibold mb-2 mb-md-0 italic"
                     type="button"
                   >
-                    javascript
+                    korolev
                   </button>
                   <button
-                    class="tag-btn flex-1 bg-[#250ced10] text-clr_blue text-sm py-2 px-3 rounded-lg hover:shadow-md font-semibold"
+                    class="tag-btn flex-1 bg-[#250ced10] text-clr_blue text-sm py-2 px-3 rounded-lg hover:shadow-md font-semibold italic"
                     type="button"
                   >
-                    java
+                    ios
                   </button>
                   <button
-                    class="tag-btn flex-1 bg-[#250ced10] text-clr_blue text-sm py-2 px-3 rounded-lg hover:shadow-md font-semibold"
+                    class="tag-btn flex-1 bg-[#250ced10] text-clr_blue text-sm py-2 px-3 rounded-lg hover:shadow-md font-semibold italic"
                     type="button"
                   >
-                    jquery
+                    HTML
                   </button>
                   <button
-                    class="tag-btn flex-1 bg-[#250ced10] text-clr_blue text-sm py-2 px-3 rounded-lg hover:shadow-md font-semibold"
+                    class="tag-btn flex-1 bg-[#250ced10] text-clr_blue text-sm py-2 px-3 rounded-lg hover:shadow-md font-semibold italic"
                     type="button"
                   >
-                    html
+                    Scala
                   </button>
                   <button
-                    class="tag-btn flex-1 bg-[#250ced10] text-clr_blue text-sm py-2 px-3 rounded-lg hover:shadow-md font-semibold"
+                    class="tag-btn flex-1 bg-[#250ced10] text-clr_blue text-sm py-2 px-3 rounded-lg hover:shadow-md font-semibold italic"
                     type="button"
                   >
-                    arrays
+                    FP
                   </button>
                   <button
-                    class="tag-btn flex-1 bg-[#250ced10] text-clr_blue text-sm py-2 px-3 rounded-lg hover:shadow-md font-semibold"
+                    class="tag-btn flex-1 bg-[#250ced10] text-clr_blue text-sm py-2 px-3 rounded-lg hover:shadow-md font-semibold italic"
                     type="button"
                   >
-                    css
+                    React
                   </button>
                   <button
-                    class="tag-btn flex-1 bg-[#250ced10] text-clr_blue text-sm py-2 px-3 rounded-lg hover:shadow-md font-semibold"
+                    class="tag-btn flex-1 bg-[#250ced10] text-clr_blue text-sm py-2 px-3 rounded-lg hover:shadow-md font-semibold mb-2 mb-md-0 italic"
                     type="button"
                   >
-                    php
+                    Objective C
                   </button>
                   <button
-                    class="tag-btn flex-1 bg-[#250ced10] text-clr_blue text-sm py-2 px-3 rounded-lg hover:shadow-md font-semibold"
+                    class="tag-btn flex-1 bg-[#250ced10] text-clr_blue text-sm py-2 px-3 rounded-lg hover:shadow-md font-semibold italic"
                     type="button"
                   >
-                    c
-                  </button>
-                  <button
-                    class="tag-btn flex-1 bg-[#250ced10] text-clr_blue text-sm py-2 px-3 rounded-lg hover:shadow-md font-semibold"
-                    type="button"
-                  >
-                    form
+                    Interaction
                   </button>
                 </div>
 
@@ -1273,7 +1265,7 @@
                     <a> Add Billing Profile </a>
                   </button>
                 </div>
-              </form>
+              </div>
             </div>
           </div>
 
