added two pages

--- a/live-request-field-details.html
+++ b/live-request-field-details.html
@@ -94,6 +94,22 @@
 
               <li>
                 <a
+                  href="./view-service-request.html"
+                  class="flex items-center pl-[1.2rem] py-3 lg:py-5 hover:text-clr_blue"
+                >
+                  <img
+                    src="./utils/images/service-request.svg"
+                    alt="Icon"
+                    loading="lazy"
+                  />
+                  <span class="ml-2 text-xs lg:text-sm font-medium"
+                    >View Service Request</span
+                  >
+                </a>
+              </li>
+
+              <li>
+                <a
                   href="./service-profile.html"
                   class="flex items-center pl-6 py-3 lg:py-5 hover:text-clr_blue"
                 >
