--- a/service-profile.html
+++ b/service-profile.html
@@ -93,6 +93,22 @@
                 </a>
               </li>
 
+              <li>
+                <a
+                  href="./view-service-request.html"
+                  class="flex items-center pl-[1.2rem] py-3 lg:py-5 hover:text-clr_blue"
+                >
+                  <img
+                    src="./utils/images/service-request.svg"
+                    alt="Icon"
+                    loading="lazy"
+                  />
+                  <span class="ml-2 text-xs lg:text-sm font-medium"
+                    >View Service Request</span
+                  >
+                </a>
+              </li>
+
               <li class="relative">
                 <a href="service-profile.html" class="bg-green-600">
                   <div
