wrong text replaced

--- a/live-request-field-details-two.html
+++ b/live-request-field-details-two.html
@@ -276,7 +276,7 @@
                     <h4
                       class="text-xs sm:text-sm text-clr_blue_light font-semibold"
                     >
-                      I have tried thing like
+                      how to redirect to an external URL in Korolev App
                     </h4>
                     <h5 class="flex text-xs">
                       <span class="text-clr_blue_light font-semibold"
