--- a/visible-profile-single.html
+++ b/visible-profile-single.html
@@ -13,8 +13,8 @@
     />
     <link rel="stylesheet" href="./utils/css/styles.css" />
 
-    <script src="./utils/js/visibleProfile.js"></script>
     <script src="./utils/js/dashboard.js" defer></script>
+    <script src="./utils/js/visibleProfile.js" defer></script>
 
     <title>Visible Profile - PairTime</title>
   </head>
@@ -156,22 +156,6 @@
                 </a>
               </li>
 
-              <!-- <li>
-                <a
-                  href="./visible-profile-all.html"
-                  class="flex items-center pl-6 py-3 lg:py-5 hover:text-clr_blue"
-                >
-                  <img
-                    src="./utils/images/icon-13.svg"
-                    alt="Icon"
-                    loading="lazy"
-                  />
-                  <span class="ml-2 text-xs lg:text-sm font-medium"
-                    >Visible Profiles</span
-                  >
-                </a>
-              </li> -->
-
               <li class="flex-1 flex items-end mb-5">
                 <a
                   href="/"
@@ -283,23 +267,8 @@
                   </p>
 
                   <div class="lg:flex lg:flex-row-reverse lg:items-center">
-                    <!-- <button class="bg-clr_blue text-sm py-2 px-4 text-white rounded-2xl hover:shadow-btn mt-6 md:mt-0"
-                    onclick="displayToggle([`all-services-list`,`show-profiles-link`])
-                    displayNone(`bubble-yellow`)">
-                    <a>
-                      Show All
-                    </a>
-                  </button> -->
-
-                    <!-- <button
-                      class="bg-clr_blue text-sm py-2 px-4 font-semibold text-white rounded-2xl hover:shadow-btn mt-6 md:mt-0"
-                      id="show-all-btn"
-                    >
-                      Show All
-                    </button> -->
-
                     <button
-                      class="bg-clr_blue text-sm py-2 px-4 font-semibold text-white rounded-2xl hover:shadow-btn w-full md:w-auto"
+                      class="bg-clr_blue text-sm py-2 px-4 font-semibold text-white rounded-2xl hover:shadow-btn w-full xs:w-auto"
                       id="show-all-btn"
                     >
                       Show All
@@ -356,10 +325,14 @@
                               Zhenhao</a
                             >
                             is the founder of PairTime. He contributed to a few
-                            open source projects, but is a maintainer of
-                            none.Zhenhao is the founder of PairTime. He
-                            contributed to a few open source projects, but is a
-                            maintainer of none.
+                            open source projects, but is a maintainer of none.<a
+                              href=""
+                              class="text-clr_blue underline opacity-90"
+                            >
+                              Zhenhao</a
+                            >
+                            is the founder of PairTime. He contributed to a few
+                            open source projects, but is a maintainer of none.
                           </p>
                         </div>
                       </div>
@@ -367,7 +340,7 @@
                     <div class="min-w-max pt-3 pb-2">
                       <a href="./search-detail.html">
                         <button
-                          class="bg-clr_blue text-sm py-3 px-4 text-white font-semibold rounded-lg hover:shadow-btn w-full md:w-auto"
+                          class="bg-clr_blue text-sm py-3 px-4 text-white font-semibold rounded-lg hover:shadow-btn w-full xs:w-auto"
                         >
                           Request a Pairing session
                         </button>
@@ -379,9 +352,9 @@
                   >
                     <p>
                       In 2015,
-                      <a href="" class="text-clr_blue underline opacity-90"
-                        >Zhenhao
-                      </a>
+                      <a href="" class="text-clr_blue underline opacity-90">
+                        Zhenhao</a
+                      >
                       dropped out of his PhD program in mathematical logic to
                       explore the tech world.
                     </p>
@@ -399,9 +372,9 @@
                     class="text-xs lg:text-sm text-clr_blue_light capitalize pt-4"
                   >
                     In 2019,
-                    <a href="" class="text-clr_blue underline opacity-90"
-                      >Zhenhao
-                    </a>
+                    <a href="" class="text-clr_blue underline opacity-90">
+                      Zhenhao</a
+                    >
                     became an independent consultant to bootstrap his startup
                     project PairTime, the product you are using now.
                   </p>
@@ -410,9 +383,9 @@
                   >
                     <p>
                       Areas that
-                      <a href="" class="text-clr_blue underline opacity-90"
-                        >Zhenhao
-                      </a>
+                      <a href="" class="text-clr_blue underline opacity-90">
+                        Zhenhao</a
+                      >
                       can help you with:
                     </p>
                     <li>1. big data tech such as Spark, Flink, and Kafka</li>
@@ -462,7 +435,7 @@
                     <div class="min-w-max pt-3 pb-2">
                       <a href="./search-detail.html">
                         <button
-                          class="bg-clr_blue text-sm py-3 px-4 text-white font-semibold rounded-lg hover:shadow-btn w-full md:w-auto"
+                          class="bg-clr_blue text-sm py-3 px-4 text-white font-semibold rounded-lg hover:shadow-btn w-full xs:w-auto"
                         >
                           Request a Pairing session
                         </button>
@@ -472,14 +445,19 @@
                   <div
                     class="text-xs lg:text-sm text-clr_blue_light capitalize pt-2"
                   >
-                    when an unknown printer took a
-                    <a href="" class="text-clr_blue underline opacity-90"
-                      >Zhenhao
-                    </a>
-                    of type and scrambled it to make a type specimen book. It
-                    has survived not only five centuries, but also the leap into
-                    electronic typesetting, remaining essentially unchanged. It
-                    was popularised in the 1960s with the release of Letraset
+                    <p>
+                      In 2015, Robert dropped out of his PhD program in
+                      mathematical logic to explore the tech world.
+                    </p>
+                    <p>
+                      He worked as a junior consultant at Accenture for 1.5
+                      years, helping clients with their data challenges using
+                      Spark, Flink, and Kafka. Then, he worked as a data
+                      scientist and data engineer at Connecterra, an AI startup
+                      in Amsterdam, for more than 2 years, putting ML models
+                      into production and building ETL pipelines and feature
+                      engineering pipelines.
+                    </p>
                   </div>
                   <p
                     class="text-xs lg:text-sm text-clr_blue_light capitalize pt-4"
@@ -521,6 +499,14 @@
     <script>
       tailwind.config = {
         theme: {
+          screens: {
+            xs: "540px",
+            sm: "640px",
+            md: "768px",
+            lg: "1024px",
+            xl: "1280px",
+            "2xl": "1536px",
+          },
           extend: {
             boxShadow: {
               btn: "0px 10px 30px rgba(86, 59, 255, 0.26)",
