--- a/account.html
+++ b/account.html
@@ -264,7 +264,7 @@
               </p>
               <a href="create-billing.html">
                 <button
-                  class="bg-clr_blue text-xs lg:text-sm py-2 px-5 text-white font-semibold rounded-xl hover:shadow-btn mb-10 md:mb-14 w-full sm:w-auto"
+                  class="bg-clr_blue text-xs lg:text-sm py-2 px-5 text-white font-semibold rounded-xl hover:shadow-btn mb-10 md:mb-14 w-full xs:w-auto"
                 >
                   Create Billing Profile
                 </button>
@@ -286,7 +286,7 @@
               </p>
               <a href="donate.html">
                 <button
-                  class="bg-clr_blue text-xs lg:text-sm py-2 px-5 text-white font-semibold rounded-xl hover:shadow-btn w-full sm:w-auto"
+                  class="bg-clr_blue text-xs lg:text-sm py-2 px-5 text-white font-semibold rounded-xl hover:shadow-btn w-full xs:w-auto"
                 >
                   Donate
                 </button>
@@ -304,6 +304,14 @@
     <script>
       tailwind.config = {
         theme: {
+          screens: {
+            xs: "540px",
+            sm: "640px",
+            md: "768px",
+            lg: "1024px",
+            xl: "1280px",
+            "2xl": "1536px",
+          },
           extend: {
             boxShadow: {
               btn: "0px 10px 30px rgba(86, 59, 255, 0.26)",
