--- a/create-post-content.html
+++ b/create-post-content.html
@@ -267,27 +267,33 @@
                   Content
                 </p>
 
-                <div class="sm:flex sm:justify-start grid gap-3 md:gap-2">
+                <div class="xs:flex xs:justify-start grid gap-3 md:gap-2">
                   <button
-                    class="text-[#250CED] bg-[#FFF] text-xs sm:text-sm py-2 px-4 rounded-2xl font-semibold hover:shadow-btn flex items-center justify-center"
+                    class="text-[#250CED] bg-[#FFF] text-xs sm:text-sm py-2 px-3 rounded-2xl font-semibold hover:shadow-btn flex items-center justify-center"
                     id="close-post-btn"
                   >
-                    Copy link <img class="ml-2 w-[15px]" src="./utils/images/link-icon.svg" alt="Link" loading="lazy">
+                    Copy link
+                    <img
+                      class="ml-2 w-[15px]"
+                      src="./utils/images/link-icon.svg"
+                      alt="Link"
+                      loading="lazy"
+                    />
                   </button>
                   <button
-                    class="text-white bg-[#FF3D00] text-xs sm:text-sm py-2 px-4 sm:px-5 rounded-2xl font-semibold hover:shadow-btn"
+                    class="text-white bg-[#FF3D00] text-xs sm:text-sm py-2 px-3 rounded-2xl font-semibold hover:shadow-btn"
                     id="close-post-btn"
                   >
                     Close this post
                   </button>
                   <button
-                    class="bg-clr_blue text-xs sm:text-sm py-2 px-4 sm:px-5 text-white rounded-2xl hover:shadow-btn font-semibold"
+                    class="bg-clr_blue text-xs sm:text-sm py-2 px-3 text-white rounded-2xl hover:shadow-btn font-semibold"
                     id="exclusive-request-btn"
                   >
                     Turn it to a exclusive request
                   </button>
                   <button
-                    class="bg-clr_blue text-xs sm:text-sm py-2 px-4 sm:px-5 text-white rounded-2xl hover:shadow-btn font-semibold"
+                    class="bg-clr_blue text-xs sm:text-sm py-2 px-3 text-white rounded-2xl hover:shadow-btn font-semibold"
                     id="edit-btn"
                   >
                     Edit
@@ -295,7 +301,7 @@
                 </div>
               </div>
               <div class="border-bottom w-full border-b opacity-60 mt-2"></div>
-              
+
               <div class="create-post-form pt-6 pb-16">
                 <div class="mb-4">
                   <label
@@ -310,7 +316,9 @@
                   ></textarea>
                 </div>
 
-                <p class="inline mr-2 text-xs font-semibold text-clr_blue_light pb-2">
+                <p
+                  class="inline mr-2 text-xs font-semibold text-clr_blue_light pb-2"
+                >
                   Tags:
                 </p>
                 <div class="tag-btns inline">
@@ -399,7 +407,7 @@
                 ></div>
 
                 <div class="xl:flex xl:justify-between pt-5 lg:pt-8">
-                 <div class="schedular w-full xl:w-[61%]">
+                  <div class="schedular w-full xl:w-[61%]">
                     <!-- <div
                       class="schedular-calendar h-full"
                       id="schedular-calendar"
@@ -1015,9 +1023,7 @@
                       Meeting Preferences
                     </p>
 
-                    <div
-                      class="px-4 py-4 bg-white rounded-lg w-full"
-                    >
+                    <div class="px-4 py-4 bg-white rounded-lg w-full">
                       <div class="flex justify-between items-center">
                         <h3 class="text-sm font-semibold">Budget</h3>
                       </div>
@@ -1057,29 +1063,31 @@
                       </div>
                     </div>
 
-                    <div
-                      class="px-4 py-4 bg-white rounded-lg w-full mt-5"
-                    >
+                    <div class="px-4 py-4 bg-white rounded-lg w-full mt-5">
                       <div class="flex justify-between items-center">
                         <h3 class="text-sm font-semibold">Offer 1</h3>
                       </div>
 
                       <div class="border-b opacity-60 mt-4 mb-6"></div>
 
-                      <div>     
+                      <div>
                         <p
                           class="flex justify-between text-xs font-medium capitalize mb-2"
                         >
                           Introduction message:
-                          <span class="text-xs font-normal">Some lorem Ipsum Text which </span>
+                          <span class="text-xs font-normal"
+                            >Some lorem Ipsum Text which
+                          </span>
                         </p>
                         <p
                           class="flex justify-between text-xs font-medium capitalize mb-2"
                         >
                           Meeting start time:
-                          <span class="text-xs font-normal">2022-03-08 (20:45 UTC)</span>
+                          <span class="text-xs font-normal"
+                            >2022-03-08 (20:45 UTC)</span
+                          >
                         </p>
-                     
+
                         <p
                           class="flex justify-between text-xs font-medium capitalize mb-2"
                         >
@@ -1112,147 +1120,19 @@
           ></div>
         </section>
       </div>
-
-      <!-- Post Btn Click Modal -->
-      <section
-        class="modal bg-[#00000050] flex justify-center items-center h-[100vh] fixed inset-0 z-50 opacity-0 transition-all ease-linear pointer-events-none"
-        id="post-modal"
-      >
-        <div
-          class="container bg-white md:w-3/5 w-[98%] rounded-lg px-2 sm:px-5 py-5 flex flex-col relative"
-        >
-          <figure
-            class="absolute right-4 top-3 h-4 w-4 flex justify-center items-center rounded-full bg-red-600 cursor-pointer"
-          >
-            <img
-              src="./utils/images/cross-sign.png"
-              alt="Cross Sign"
-              loading="lazy"
-              id="cross-btn"
-            />
-          </figure>
-
-          <h4 class="text-sm font-semibold">
-            We successfully processed your post!
-          </h4>
-          <div class="border-bottom w-full border-b opacity-60 my-5"></div>
-          <p class="text-xs font-semibold">
-            You can share this post publicly with this link:
-          </p>
-
-          <div class="flex justify-between gap-2 sm:gap-4 mt-5 mb-7">
-            <input
-              type="text"
-              class="flex-1 px-5 py-4 border border-[#f7f8fb] rounded-lg shadow-input_two"
-              id="copy-input"
-              readonly
-            />
-            <button
-              class="border border-[#f7f8fb] rounded-lg px-3 sm:px-5 py-4 shadow-input_two relative"
-              id="copy-post-link-btn"
-            >
-              <span
-                class="opacity-0 transition-all ease-in absolute -top-6 left-0 text-sm"
-                id="copied-message"
-                >copied</span
-              >
-              <img
-                src="./utils/images/files.svg"
-                alt="Two files on top of each other"
-                loading="lazy"
-              />
-            </button>
-          </div>
-
-          <div class="btns flex justify-between gap-2">
-            <button
-              class="bg-clr_blue text-xs py-2 px-5 text-white font-semibold rounded-lg hover:shadow-btn w-full sm:w-auto"
-              id="post-another-btn"
-            >
-              Post another one
-            </button>
-
-            <a href="/dashboard.html" class="w-full sm:w-auto">
-              <button
-                class="bg-clr_blue text-xs py-2 px-5 text-white font-semibold rounded-lg hover:shadow-btn w-full sm:w-auto"
-              >
-                Go To Home
-              </button>
-            </a>
-          </div>
-        </div>
-      </section>
-
-      <!-- Preview Button Click Modal Open -->
-      <section
-        class="modal bg-[#00000050] flex justify-center items-center h-[100vh] fixed inset-0 z-50 opacity-0 pointer-events-none transition-all ease-linear"
-        id="preview-modal"
-      >
-        <div
-          class="container bg-white md:w-3/5 w-[95%] h-3/5 rounded-lg px-6 py-5 flex flex-col relative"
-        >
-          <figure
-            class="absolute right-4 top-3 h-4 w-4 flex justify-center items-center rounded-full bg-red-600 cursor-pointer"
-            id="preview-cross-btn"
-          >
-            <img
-              src="./utils/images/cross-sign.png"
-              alt="Cross Sign"
-              loading="lazy"
-            />
-          </figure>
-
-          <h4 class="text-sm font-semibold" id="preview-title">no title yet</h4>
-          <div class="border-bottom w-full border-b opacity-60 my-5"></div>
-          <p
-            class="preview-content flex-1 text-xs overflow-y-auto pr-1"
-            id="preview-content"
-          >
-            no content yet
-          </p>
-          <p class="text-xs my-2" id="preview-tags"></p>
-          <button
-            class="bg-clr_blue text-xs py-2 px-3 text-white font-semibold rounded-lg hover:shadow-btn w-full sm:w-auto self-center"
-            id="preview-close-btn"
-          >
-            close
-          </button>
-        </div>
-      </section>
     </main>
-
-    <!-- date event popup -->
-    <!-- <div
-      id="date-popup"
-      class="flex justify-center items-center h-screen fixed inset-0 z-[50] opacity-0 pointer-events-none"
-    >
-      <div
-        class="h-[20rem] w-[20rem] bg-white p-8 rounded-lg border-blue-800 border-2"
-      >
-        <label class="text-sm">Enter Start Time</label>
-        <input
-          type="type"
-          id="date-start-input"
-          class="rounded-md h-[2rem] mb-3 w-full p-3 bg-[#F7F8FB]"
-        />
-        <label class="text-sm">Enter End Time</label>
-        <input
-          type="type"
-          id="date-end-input"
-          class="rounded-md h-[2rem] mb-3 w-full p-3 bg-[#F7F8FB]"
-        />
-        <button
-          id="date-btn"
-          class="text-sm bg-clr_blue text-white px-4 py-2 rounded-lg mt-3 w-full"
-        >
-          Add
-        </button>
-      </div> -->
-    </div>
 
     <script>
       tailwind.config = {
         theme: {
+          screens: {
+            xs: "540px",
+            sm: "640px",
+            md: "768px",
+            lg: "1024px",
+            xl: "1280px",
+            "2xl": "1536px",
+          },
           extend: {
             boxShadow: {
               btn: "0px 10px 30px rgba(86, 59, 255, 0.26)",
