--- a/dashboard-update.html
+++ b/dashboard-update.html
@@ -708,6 +708,14 @@
 
     <script>
       tailwind.config = {
+        screens: {
+          xs: "540px",
+          sm: "640px",
+          md: "768px",
+          lg: "1024px",
+          xl: "1280px",
+          "2xl": "1536px",
+        },
         theme: {
           extend: {
             boxShadow: {
