--- a/service-profile.html
+++ b/service-profile.html
@@ -1300,7 +1300,7 @@
                             </div>
                             <div>
                               <button
-                                class="bg-clr_blue text-sm py-[14px] px-3 min-w-max text-white rounded-lg hover:shadow-btn font-semibold w-full md:w-auto"
+                                class="bg-clr_blue text-sm py-[12px] px-3 min-w-max text-white rounded-lg hover:shadow-btn font-semibold w-full xs:w-auto"
                               >
                                 <a> Add to profile </a>
                               </button>
@@ -1356,7 +1356,7 @@
                     </div>
                     <div class="text-center lg:text-right mt-10">
                       <button
-                        class="w-full md:w-auto bg-clr_blue text-sm py-3 px-5 text-white rounded-2xl hover:shadow-btn font-semibold"
+                        class="w-full xs:w-auto bg-clr_blue text-sm py-3 px-5 text-white rounded-2xl hover:shadow-btn font-semibold"
                         id="submit-btn"
                       >
                         Submit
@@ -1442,38 +1442,17 @@
       </section>
     </main>
 
-    <!-- date event popup -->
-    <!-- <div
-      id="date-popup"
-      class="flex justify-center items-center h-screen fixed inset-0 z-[50] opacity-0 pointer-events-none"
-    >
-      <div
-        class="h-[20rem] w-[20rem] bg-white p-8 rounded-lg border-blue-800 border-2"
-      >
-        <label class="text-sm">Enter Start Time</label>
-        <input
-          type="type"
-          id="date-start-input"
-          class="rounded-md h-[2rem] mb-3 w-full p-3 bg-[#F7F8FB]"
-        />
-        <label class="text-sm">Enter End Time</label>
-        <input
-          type="type"
-          id="date-end-input"
-          class="rounded-md h-[2rem] mb-3 w-full p-3 bg-[#F7F8FB]"
-        />
-        <button
-          id="date-btn"
-          class="text-sm bg-clr_blue text-white px-4 py-2 rounded-lg mt-3 w-full"
-        >
-          Add
-        </button>
-      </div>
-    </div> -->
-
     <script>
       tailwind.config = {
         theme: {
+          screens: {
+            xs: "540px",
+            sm: "640px",
+            md: "768px",
+            lg: "1024px",
+            xl: "1280px",
+            "2xl": "1536px",
+          },
           extend: {
             boxShadow: {
               btn: "0px 10px 30px rgba(86, 59, 255, 0.26)",
